# naks_cli

./: .gitignore  111.py  pyproject.toml  rencons.py  requirements.txt
src/: _types.py  commands.py  config.py  db_engine.py  errors.py  models.py  rencons.py  repositories.py  settings.py  shemas.py
src/application/common/: exc.py
src/application/interactors/: __init__.py  auth.py  parse_naks.py
src/application/interfaces/: naks_parser.py
src/commands/: __init__.py  db_commands.py  naks_commands.py
src/db/: models.py  repositories.py
src/infrastructure/: token_manager.py
src/infrastructure/dto/: __init__.py  data.py
src/infrastructure/parsers/: base.py  personal.py
src/infrastructure/services/: __init__.py  api.py
src/main/: app.py  dependencies.py
src/presentation/: __init__.py  cli_types.py
src/presentation/commands/: auth.py  parse_naks.py
src/services/: command_services.py  db_services.py
src/services/naks/: parse_services.py
src/utils/: UoWs.py  funcs.py  parse_utils.py  queue.py  utils.py
src/utils/naks/naks_parsers/: _types.py  extractors.py  parsers.py  results.py
src/utils/naks/parsers/: _types.py  (+6 more)
src/utils/naks_service/: _types.py  extractors.py  http_workers.py  main.py
test/: conftest.py  funcs.py
test/test_commands/: test_db_commands.py
test/test_db/: conftest.py  test_db_commands.py  test_db_services.py  test_repositories.py
test/test_naks/test_parsers/: conftest.py  test_extractors.py  test_http_workers.py  test_parsers.py
test/test_services/: test_api_services.py  test_db_services.py  test_parse_naks_services.py
(+2 files in other folders)
